[project]
name = "ha-mqtt-discoverable"
version = "0.23.0"
description = "Python library for creating MQTT entities compatible with Home Assistant"
authors = [{name = "Joe Block", email = "jpb@unixorn.net"}]
readme = "README.md"
requires-python = ">=3.10.0,<4.0"
dependencies = [
    "paho-mqtt==2.1.0",
    "pydantic==2.12.5",
]


[tool.poetry]
packages = [{include = "ha_mqtt_discoverable"}]


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.5.0"
ruff = "^0.14.9"


[tool.poetry.group.test.dependencies]
coverage = "^7.13.0"
pytest = "^9.0.2"
pytest-mock = "^3.15.1"


[build-system]
requires = ["poetry-core>=2.2.1"]
build-backend = "poetry.core.masonry.api"
