[project]
name = "ha-mqtt-discoverable"
version = "0.24.1"
description = "Python library for creating MQTT entities compatible with Home Assistant"
authors = [{ name = "Joe Block", email = "jpb@unixorn.net" }]
readme = "README.md"
license = 'Apache-2.0'
license-files = ['LICENSE']
requires-python = ">=3.10.0,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "paho-mqtt==2.1.0",
    "pydantic==2.12.5",
]

[project.urls]
GitHub = "https://github.com/unixorn/ha-mqtt-discoverable"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1,<5",
    "ruff>=0.15.7,<0.16",
]
test = [
    "coverage>=7.13.5,<8",
    "pytest>=9.0.2,<10",
    "pytest-mock>=3.15.1,<4",
]

[build-system]
requires = ["poetry-core>=2.3.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"
